--- a/project/Makefile
+++ b/project/Makefile
@@ -6,7 +6,7 @@
 #    By: cchameyr <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/02/05 10:57:06 by cchameyr          #+#    #+#              #
-#    Updated: 2018/02/12 09:52:31 by cchameyr         ###   ########.fr        #
+#    Updated: 2018/02/12 14:45:39 by cchameyr         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,8 @@ OBJECTS_NAME_FOLDER = objects
 SOURCES_NAME_FOLDER = sources
 
 FILES =				main.cpp \
-					AbstractVM.cpp	
+					AbstractVM.cpp \
+					AbstractVMException.cpp	
 
 SRCS =				$(addprefix $(SOURCES_NAME_FOLDER)/, $(FILES))
 
